# stark-bot-security-audit

./: .env.template  .gitignore  AGENT_INSTRUCTIONS.md  CLEANUP_LATER.md  Cargo.toml  Discord_Hooks_Bot.md  Dockerfile  Dockerfile.dev  Dockerfile.frontend  FULL_X_READ_INTEGRATION.md  FUTURE_UPGRADES.md  IMPROVEMENTS.md  KEYSTORE_SERVER_PLAN.md  MOCK_AI_DISPATCHER_TESTS.md  MODULE_DISTRIBUTION_PLAN.md  PLAN.md  POLYMARKET_ALLOY_IMPLEMENTATION.md  POLYMARKET_TRADING_PLAN.md  README.md  SAFE_MODE_CHANNELS.md  SCRIPTING_ENGINE.md  SOUL.md  TASK_AUTO_COMPLETION.md  TODO.md  WALLET_MONITORING.md  build_and_push_docker.sh  discord_tipping.db-shm  discord_tipping.db-wal  docker-compose.dev.yml  docker-compose.yml  docker_run.sh  module_plugins.md  railway.toml  wallet_monitor.db-shm  wallet_monitor.db-wal
.do/: app.yaml  deploy.template.yaml
abis/: aave_pool.json  erc20.json  stark_license.json  uniswap_v4_position_manager.json  uniswap_v4_state_view.json
config/: ai_endpoints.ron  networks.ron  uniswap_pools.ron  web3_presets.ron  x402_fetch_presets.ron  x402_rpc_presets.ron
docs/: ASYNC_TOOLS.md  EIP-8004-implementation.md  EIP-8004-integration-plan.md
modules/discord-tipping-service/: Cargo.toml
modules/discord-tipping-service/src/: db.rs  main.rs  routes.rs
modules/social-monitor-service/: Cargo.toml
modules/social-monitor-service/src/: dashboard.rs  db.rs  forensics.rs  main.rs  routes.rs  twitter_api.rs  worker.rs
modules/wallet-monitor-service/: Cargo.toml
modules/wallet-monitor-service/src/: worker.rs
skills/: 4claw.md  aave.md  agent_identity.md  alchemy.md  bankr.md  bridge_usdc.md  claude_code.md  cloudflare.md  cloudflare_dns.md  code-review.md  commit.md  conway_domains.md  create-project.md  create-skill.md  debug.md  deploy-github.md  dexscreener.md  discord.md  discord_tipping.md  figma.md  full-dev-workflow.md  geckoterminal.md  (+26 more)
(+404 files in other folders)
