[package]
name = "social-monitor-service"
version = "0.1.0"
edition = "2024"

[dependencies]
social-monitor-types = { path = "../social-monitor-types" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
regex = "1"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
